switched to dexcom api... auth working but token exchange does not work :-(

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -37,7 +37,7 @@ android {
         versionName flutterVersionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         manifestPlaceholders = [
-                'appAuthRedirectScheme': 'com.duendesoftware.demo'
+                'appAuthRedirectScheme': 'copilot'
         ]
     }
 
